<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/bg2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="108dp"
            android:layout_height="97dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cherry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/homepagetextcolor"
            android:textSize="48sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/logActivityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_border"
            android:onClick="loginToActivity"
            android:text="@string/logInBtn"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

               <Button
            android:id="@+id/signActivityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:onClick="signUpToActivity"
            android:text="@string/registerBtn"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>





