<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catbg"
    android:orientation="vertical"
    tools:context=".CategoryActivity">

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#69000000" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="72dp"
                 android:layout_height="55dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
                 app:srcCompat="@drawable/cherry" />

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="cursive"
                 android:text="@string/app_name"
                 android:textAlignment="center"
                 android:textColor="@color/homepagetextcolor"
                 android:textSize="48sp"
                 android:textStyle="bold|italic" />

             <TextView
                 android:id="@+id/tagline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="3dp"
                 android:fontFamily="cursive"
                 android:text="@string/tagline"
                 android:textAlignment="center"
                 android:textColor="#D92020C4"
                 android:textSize="34sp" />

             <Button
                 android:id="@+id/menuBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|top"
                 android:layout_marginTop="55dp"
                 android:background="@drawable/button_border"
                 android:onClick="goToMenu"
                 android:text="@string/menutitle"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold" />

         </LinearLayout>
     </LinearLayout>

</LinearLayout>
